hphp/test/zend/good/Zend/tests/errmsg_042.php
<?php

$a = array(1,2,3);
foreach ($a as &$k=>$v) {
}

echo "Done\n";
?>